Allow unverified users to view teams

--- a/main/static/styles/views/user_profile/view.scss
+++ b/main/static/styles/views/user_profile/view.scss
@@ -15,6 +15,11 @@
             margin-top: $small-spacing;
             margin-bottom: $medium-spacing;
         }
+
+        &__no-team {
+            font-size: 18px;
+            margin-bottom: $small-spacing;
+        }
     }
 }
 .edit-link {
